fix(ui): fixed issue with background image not showing properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-element.style { }
-
 body {
     background-color: rebeccapurple;
     height: 100vh;
@@ -9,7 +7,7 @@ body {
 }
 
 .background {
-    background-image: url("./assets/img/NighttimeBG1.jpg");
+    background-image: url("../img/NighttimeBG1.jpg"); /* Make sure this path is correct */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -23,8 +21,8 @@ body {
 
 .container {
     position: relative;
-    z-index: 1; 
-    color: white;
+    z-index: 1;
+    color: white; /* Ensures text is visible */
 }
 
 .button {
@@ -46,3 +44,4 @@ body {
     box-shadow: 0 2px gainsboro;
     transform: translateY(2px);
 }
+
